data/derived/comb/progs/unify/prog7608.ml.out
Characters 101-103:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a list * 'b
       but an expression was expected of type ('b -> 'b) list
